import ch.szclsb.tjv.task.GenerateMatrixTask

plugins {
    id 'java'
}

group = 'ch.szclsb.stvg.dsws'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.register("generate", GenerateMatrixTask) {
    outputDir = project.layout.buildDirectory.dir("generated/sources/matrices/java/main/ch/szclsb/tjv")
    matrixPackage = "ch.szclsb.tjv"
    matrices {
        FMatrix2x2 {
            rows = 2
            columns = 2
        }
        FMatrix4x4 {
            rows = 4
            columns = 4
        }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
compileJava {
    dependsOn(generate)
    options.compilerArgs += '--enable-preview'
}

sourceSets {
    main {
        java.srcDirs += project.layout.buildDirectory.dir("generated/sources/matrices/java/main")
    }
}

test {
    useJUnitPlatform()
}
